<resources>
    <string name="app_name">MapOfNews</string>
    <string name="success">Object is saved in Backendless. Please check in the console.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Map</string>
    <string name="filtering_desc">filtering of the news</string>
    <string name="info_desc">information and guidance on the application</string>
    <string name="settings_desc">opens the settings of the app</string>
    <string name="time_desc">filtering of the news by the time</string>
    <string name="update_desc">download the news from server and update view</string>
    <string name="resotre_desc">restore view of the map to default (whole map)</string>

    <string name="read_it">Přečíst</string>
    <string name="source">Zdroj:</string>
    <string name="when">Kdy:</string>
    <string name="today">dnes</string>
    <string name="yesterday">včera</string>
    <string name="date_format">d.M</string>
    <string name="back">Zpět</string>
    <string name="error_news_not_ready">Zpráva není připravena na přečtení</string>
    <string name="error">Chyba</string>
    <string name="read_original">Na zdroj</string>
    <string name="img_desc">Image connected with the event.</string>
</resources>
