<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cz.mapofnews.android.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:id="@+id/linearLayout" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" android:weightSum="1" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_menu_time"
                android:id="@+id/timeBtn" android:layout_weight="0.15" android:layout_height="0dp"
                android:contentDescription="@string/time_desc"/>
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_menu_filter"
                android:id="@+id/filterBtn"
                android:layout_weight="0.15" android:contentDescription="@string/filtering_desc"/>
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_menu_update" android:id="@+id/updateBtn"
                android:layout_weight="0.15" android:contentDescription="@string/update_desc"/>
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:onClick="onRestoreClick"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_menu_restore" android:id="@+id/restoreBtn"
                android:layout_weight="0.15" android:contentDescription="@string/resotre_desc"/>
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_menu_info" android:id="@+id/infoBtn"
                android:layout_weight="0.15" android:contentDescription="@string/info_desc"/>
        <ImageButton
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_menu_settings" android:id="@+id/settingsBtn"
                android:layout_weight="0.15" android:contentDescription="@string/settings_desc"/>
    </LinearLayout>

    <cz.mapofnews.android.widgets.MySlidingPaneLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/linearLayout"
            android:id="@+id/slideLayout">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/fragment_frame_for_map"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
        </FrameLayout>
        <include layout="@layout/layout_right_panel"/>
    </cz.mapofnews.android.widgets.MySlidingPaneLayout>
</android.support.constraint.ConstraintLayout>
