<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rightPanel"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_marginStart="300dp"
    android:layout_weight="1"
    android:background="@color/background"
    android:clickable="true"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    tools:showIn="@layout/activity_main"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleView"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.02"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/lineTopView"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:adjustViewBounds="true"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lineTopView"
                        app:srcCompat="@color/background"
                        android:contentDescription="@string/img_desc" />

                    <TextView
                        android:id="@+id/abstractView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:maxLines="30"
                        android:scrollbars="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/constraintLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="7dp"
                        app:layout_constraintBottom_toTopOf="@+id/readBtn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <TextView
                            android:id="@+id/dateView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            app:layout_constraintRight_toRightOf="parent" />

                        <TextView
                            android:id="@+id/sourceView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            app:layout_constraintEnd_toStartOf="@+id/dateView"
                            app:layout_constraintStart_toEndOf="@+id/sourceLabelView" />

                        <TextView
                            android:id="@+id/sourceLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/source"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            app:layout_constraintLeft_toLeftOf="parent" />


                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="41dp">

                        <Button
                            android:id="@+id/originalBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@color/cardview_shadow_end_color"
                            android:text="@string/read_original"
                            android:textColor="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <Button
                            android:id="@+id/readBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/roundedbutton"
                            android:onClick="startNewsActivity"
                            android:text="@string/read_it"
                            android:textColor="@color/background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>